<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/back_arrow_black_1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Add Vital Device"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/device_id"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etDeviceId"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_new_insurance_bg_tv"
            android:gravity="center_vertical"
            android:hint="@string/enter_device_id_here"
            android:inputType="number"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/serial_number"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSerialNumber"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_new_insurance_bg_tv"
            android:gravity="center_vertical"
            android:hint="@string/entert_the_serial_number_here"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddDevice"
            android:layout_width="160dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/oem_button"
            android:gravity="center"
            android:text="@string/add_device"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/background_dark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rvNoRecordFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/no_device_added_yet"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAddedDevice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_vital_add_device" />
        </RelativeLayout>

    </LinearLayout>
</layout>